[package]
name = "intro-to-ahc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proconio = {version = "0.4.5", features = ["derive"]}
ac-library-rs = {version = "0.1.1"}
petgraph = {version = "0.6.3"}
itertools = {version = "0.11.0"}
